# CarCam_NN

./: README.md  bootraspi.txt  main.py  model_unet_light.h5  pyproject.toml  useful_terminal_commands.txt
app/: board.py  camera.py  get_model_version.py  params.py  robot.py  router.py  segmentation.py
func/: controlmotor.py
moduls/: segmentation.py
old_code_snippets/: main_old.py  segmentation_old.py
service/: segmentation.py
service/templates/: index.html  index_old.html
static/css/: mainpage.css
templates/: index.html  index_test.html
