[project]
name = "carcam-nn"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Nemeth"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "tensorflow (==2.11.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "opencv-python (==4.5.5.64)",
    "numpy (==1.21.2)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
